@@ -1,29 +1,38 @@
 /*
- * Copyright 2006-2021 The MZmine Development Team
+ * Copyright (c) 2004-2022 The MZmine Development Team
  *
- * This file is part of MZmine.
+ * Permission is hereby granted, free of charge, to any person
+ * obtaining a copy of this software and associated documentation
+ * files (the "Software"), to deal in the Software without
+ * restriction, including without limitation the rights to use,
+ * copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the
+ * Software is furnished to do so, subject to the following
+ * conditions:
  *
- * MZmine is free software; you can redistribute it and/or modify it under the terms of the GNU
- * General Public License as published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
+ * The above copyright notice and this permission notice shall be
+ * included in all copies or substantial portions of the Software.
  *
- * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
- * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License along with MZmine; if not,
- * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
- *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+ * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+ * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+ * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+ * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+ * OTHER DEALINGS IN THE SOFTWARE.
  */
 
 package io.github.mzmine.parameters.parametertypes.elements;
 
 import io.github.mzmine.parameters.Parameter;
 import io.github.mzmine.parameters.UserParameter;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.jetbrains.annotations.Nullable;
 import org.openscience.cdk.Element;
 
 public class ElementsParameter implements UserParameter<List<Element>, ElementsComponent> {
@@ -43,9 +52,9 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
 
   public ElementsParameter(String name, String description) {
     // Most abundance elements in biomolecules as a default value for elements
-    this(name, description, true, Arrays.asList(new Element("H"),
-        new Element("C"), new Element("N"), new Element("O"),
-        new Element("S")));
+    this(name, description, true,
+        Arrays.asList(new Element("H"), new Element("C"), new Element("N"), new Element("O"),
+            new Element("S")));
   }
 
   @Override
@@ -64,7 +73,8 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
   }
 
   @Override
-  public void setValueToComponent(ElementsComponent elementsComponent, List<Element> newValue) {
+  public void setValueToComponent(ElementsComponent elementsComponent,
+      @Nullable List<Element> newValue) {
     elementsComponent.setValue(newValue);
   }
 
@@ -100,9 +110,8 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
     }
 
     String values = xmlElement.getTextContent().replaceAll("\\s", "");
-    value = Arrays.stream(values.split(","))
-        .map(Element::new)
-        .collect(Collectors.toList());
+    value = Arrays.stream(values.split(",")).distinct().map(Element::new)
+        .toList();
   }
 
   @Override
@@ -115,9 +124,7 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
       throw new NullPointerException("Value is null.");
     }
 
-    String text = value.stream()
-        .map(Element::getSymbol)
-        .map(Object::toString)
+    String text = value.stream().map(Element::getSymbol).map(Object::toString)
         .collect(Collectors.joining(","));
 
     xmlElement.setTextContent(text);
@@ -130,25 +137,26 @@ public class ElementsParameter implements UserParameter<List<Element>, ElementsC
 
   @Override
   public UserParameter<List<Element>, ElementsComponent> cloneParameter() {
-    ElementsParameter copy = new ElementsParameter(name, description, valueRequired, value);
-    copy.setValue(this.getValue());
+    var valueCopy = new ArrayList<>(value);
+    ElementsParameter copy = new ElementsParameter(name, description, valueRequired, valueCopy);
+    copy.setValue(valueCopy);
     return copy;
   }
 
   @Override
   public boolean valueEquals(Parameter<?> that) {
-    if(!(that instanceof ElementsParameter elementsParameter)) {
+    if (!(that instanceof ElementsParameter elementsParameter)) {
       return false;
     }
 
     final List<Element> thatElements = elementsParameter.getValue();
-    if(thatElements.size() != value.size()) {
+    if (thatElements.size() != value.size()) {
       return false;
     }
 
     for (int i = 0; i < value.size(); i++) {
       var element = value.get(i);
-      if(!element.compare(thatElements.get(i))) {
+      if (!element.compare(thatElements.get(i))) {
         return false;
       }
     }
